--- a/css/common.css
+++ b/css/common.css
@@ -35,6 +35,8 @@ list-element{
 }
 
 img {
-  width: 300px;
+  width: 300px; 
+  height: 200px; 
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.14), 0px 1px 5px rgba(0, 0, 0, 0.12), 0px 2px 10px rgba(0, 0, 0, 0.2);
   display: inline-block;
 }
